--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@fortawesome/fontawesome-free": "^7.1.0",
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.8",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "hbs": "^4.2.0",
     "multer": "^2.0.2",
     "mysql2": "^3.15.0",
